<package>
  <name>rokin</name>
  <version>2.4.2</version>
  <description>Provides teleoperation using joysticks or keyboard.</description>
  <maintainer email="mwise@willowgarage.com">Melonee Wise</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/turtlebot_teleop</url>
  <url type="repository">https://github.com/turtlebot/turtlebot</url>
  <url type="bugtracker">https://github.com/turtlebot/turtlebot/issues</url>
  
  <author email="mwise@willowgarage.com">Melonee Wise</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>yocs_velocity_smoother</run_depend>
</package>
